# Rag_QAbot_IBM_casestudy

./: README.md  pyproject.toml  qa_bot_app.py  test.py
