[project]
name = "rag-qabot-imb-casestudy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.0.15",
    "gradio>=5.39.0",
    "ibm-generative-ai>=3.0.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-ibm>=0.3.15",
    "openai>=1.98.0",
    "pypdf>=5.9.0",
    "python-dotenv>=1.1.1",
    "sentence-transformers>=5.0.0",
]
